Fixed off-center checkbox

--- a/main.css
+++ b/main.css
@@ -141,6 +141,7 @@ body{
 }
 .list-item__container input::after{
     position: absolute;
+    top: 5%;
     content: "";
     width:90%;
     height:90%;
